--- a/client/Dockerfile.prod
+++ b/client/Dockerfile.prod
@@ -1,13 +1,15 @@
 # build environment
 FROM node:17 as build
-WORKDIR /usr/src/app
-COPY client/package.json ./
+WORKDIR /app
+ENV PATH /app/node_modules/.bin:$PATH
+COPY package.json ./
 RUN yarn
-ADD client ./
+COPY . ./
 RUN yarn build
 
 # production enviornment
 FROM nginx:stable-alpine
-COPY --from=build /usr/src/app/build /usr/share/nginx/html
+COPY --from=build /app/build /usr/share/nginx/html
+COPY nginx/nginx.conf /etc/nginx/conf.d/default.conf
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
